--- a/ServerOB/web/templates/login.html
+++ b/ServerOB/web/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'bootstrap/base.html' %}
-{% block title %}{{ title_name }}{% endblock %}
+{% block title %}LOGIN{% endblock %}
 
 {% block content %}
     <div class="page-header">
@@ -14,8 +14,8 @@
              <input type="text" class="form-control" id="username" placeholder="请输入用户名">
              </div>
              <div class="form-group">
-             <label for="passworld">密码</label>
-             <input type="password" class="form-control" id="passworld" placeholder="请输入密码">
+             <label for="password">密码</label>
+             <input type="password" class="form-control" id="password" placeholder="请输入密码">
              </div>
          <button type="submit" class="btn btn-default">登录</button>
          </form>
