--- a/ServerOB/web/templates/login.html
+++ b/ServerOB/web/templates/login.html
@@ -8,14 +8,15 @@
         </div>
     </div>
     <div class="container">
-        <form method="post" action="#">
+        <form method="post" action="" name="login">
+            {{form.hidden_tag()}}
              <div class="form-group">
-             <label for="username">用户名</label>
-             <input type="text" class="form-control" id="username" placeholder="请输入用户名">
+                 <label for="username">用户名</label>
+                 {{form.username(size=80)}}
              </div>
              <div class="form-group">
-             <label for="password">密码</label>
-             <input type="password" class="form-control" id="password" placeholder="请输入密码">
+                 <label for="password">密码</label>
+                 {{form.password(size=80)}}
              </div>
          <button type="submit" class="btn btn-default">登录</button>
          </form>
