--- a/ServerOB/web/templates/login.html
+++ b/ServerOB/web/templates/login.html
@@ -12,11 +12,11 @@
             {{form.hidden_tag()}}
              <div class="form-group">
                  <label for="username">用户名</label>
-                 {{form.username(size=80)}}
+                 {{form.username(class="form-control", placeholder="请输入用户名", size=80)}}
              </div>
              <div class="form-group">
                  <label for="password">密码</label>
-                 {{form.password(size=80)}}
+                 {{form.password(class="form-control", placeholder="请输入密码", size=80)}}
              </div>
          <button type="submit" class="btn btn-default">登录</button>
          </form>
